lingtypology 1.1.10
- remove `ggplot2` dependencies
- add startup message with the Glottolog version
- fix `autotyp.feature()`

lingtypology 1.1.9
- fix colors in `map.features()`
- update the `autotyp.feature()` function after the new release 1.0.0
- make it possible to have just one group in the `control`
- update glottolog to v. 4.6
- make `country.lang()` and `lang.country()` functions work with real country names (Ekaterina Zalivina)

lingtypology 1.1.8 (12.10.2021)
- fix `country.lang()` functions, close #70
- update glottolog to v. 4.5
- add the `level.lang()` function

lingtypology 1.1.6 (12.10.2021)
- add `bantu.features()` function API for Bantu Basic Vocabulary Database (by Anna Smirnova, https://github.com/ropensci/lingtypology/pull/67)
- replace `glottolog` with one from Glottolog database 4.4 as CLDF (https://github.com/glottolog/glottolog-cldf)
- add `country.lang()` and `subc.lang()` functions for geting countries and subclassification in the Newick tree format

lingtypology 1.1.5 (15.05.2021)
- add `bivaltyp.feature()` function API for a typological database of bivalent verbs BivalTyp
- add `tile.opacity` argument to the `map.feature()` function
- add `vanuatu.feature()` function API for a typological database of Vanuatu Voices (by Mikhail Leonov, https://github.com/ropensci/lingtypology/pull/56)
- add `eurasianphonology.feature()` function API for a typological database  (by Kirill Koncha, https://github.com/ropensci/lingtypology/pull/58)
- add `soundcomparisons.feature()` function API for a typological database  (by Anna Smirnova, https://github.com/ropensci/lingtypology/pull/62)
- change glottolog v. 4.3 to v. 4.4

lingtypology 1.1.4 (02.10.2020)
- change glottolog v. 4.2 to v. 4.3
- change `control` argument behaviour of the "map.feature()" function; now it is possible to specify independent variable to appear/disappear.

lingtypology 1.1.3 (26.04.2020)
- add "point.cluster" argument into the "map.feature()" function