@@ -73,5 +73,6 @@ importFrom(stats,sd)
 importFrom(stringdist,stringdist)
 importFrom(utils,download.file)
 importFrom(utils,read.csv)
+importFrom(utils,read.delim)
 importFrom(utils,unzip)
 importFrom(utils,write.csv)
