@@ -7,10 +7,10 @@
 \format{
 A data frame with 188 rows and 5 variables:
 \describe{
-  \item{ISO_639-3}{The three-letter 639-3 identifier}
-  \item{ISO_639-2_B}{Equivalent 639-2 identifier of the bibliographic applications code set}
-  \item{ISO_639-2_T}{Equivalent 639-2 identifier of the terminology applications code set}
-  \item{ISO_639-1}{Equivalent 639-1 identifier}
+  \item{ISO_639_3}{The three-letter 639-3 identifier}
+  \item{ISO_639_2_B}{Equivalent 639-2 identifier of the bibliographic applications code set}
+  \item{ISO_639_2_T}{Equivalent 639-2 identifier of the terminology applications code set}
+  \item{ISO_639_1}{Equivalent 639-1 identifier}
   \item{Ref_Name}{Reference language name}
 }
 }
