@@ -2,6 +2,8 @@ lingtypology 1.1.10
 - remove `ggplot2` dependencies
 - add startup message with the Glottolog version
 - fix `autotyp.feature()`
+- add the `iso3.iso1()` function
+- add the `frequency_list.feature()` function
 
 lingtypology 1.1.9
 - fix colors in `map.features()`
